# duui-uima

./: .gitignore  .gitmodules  CITATION.cff  README.md
duui- german-sentiment-bert/: Dockerfile  README.md  pom.xml
duui-Argument/: .gitignore  Readme.md  docker_build.sh  pom.xml  requirements.txt
duui-BFSRL/: README.md  docker_cuda_build_batch.sh  pom.xml
duui-Climate/: Readme.md  docker_build.sh  pom.xml  requirements.txt
duui-Coreference/: docker_build.sh  pom.xml  reqiurements.txt  requirements.txt
duui-DeBERT-zero-short/: Dockerfile  README.md  docker_build.sh  pom.xml
duui-DeBERT-zero-shot/: .gitignore  Dockerfile_cuda  README.md  docker_build.sh  docker_build_cuda.sh  pom.xml  visualize.ipynb
duui-DeBERT-zero-shot-category/: .gitignore  Dockerfile  README.md  docker_build.sh  docker_build_cuda.sh  pom.xml
duui-DeBERTa-zero-shot-category/: Dockerfile  Dockerfile_cuda  README.md  docker_build.sh  docker_build_cuda.sh  pom.xml
duui-FactChecking/: Readme.md  docker_build.sh  pom.xml  reqiurements.txt
duui-FactCheckingTest/: docker_build.sh  pom.xml  reqiurements.txt
duui-GNFinder/: README.md  communication.lua  dockerfile  (+1 more)
duui-spacy-lua-process/: Dockerfile  README.md  justfile  pom.xml  pyproject.toml
duui-spacy-lua-process/src/duui/: utils.py
duui-spacy-lua-process/src/main/: communication_layer.lua  wsgi.py
duui-spacy-lua-process/src/main/duui/: const.py  errors.py  models.py  settings.py
duui-spacy-lua-process/src/test/java/org/texttechnologylab/DockerUnifiedUIMAInterface/: DockerTestContainerManager.java  TestSpacyBatched.java
(+1461 files in other folders)
