[project]
name = "duui-spacy-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.12",
    "pip>=25.0.1",
    "pydantic-settings>=2.9.1",
    "spacy-lookups-data>=1.0.5",
    "spacy[cuda12]>=3.8.5",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.4.1",
]
